# OpenGL

./: CMakeCache.txt  CMakeLists.txt  OpenGL.sln  README.md  build.ninja  cmake_install.cmake  error.txt  rules.ninja
.cmake/api/v1/reply/: cache-v2-36cf06f7c62005115d6b.json  cmakeFiles-v1-9f29b3ddd0e94110eeb0.json  codemodel-v2-c940d40254c589324197.json  index-2021-01-04T09-43-23-0578.json  target-OpenGL1-Debug-54478e300614e7f718d6.json
CMAKEBUILd/: CMakeCache.txt
Dependencies/include/nholmanjson/: json.hpp
Dependencies/lib/: assimp-vc142-mt.lib
OpenGL1/: CMakeCache.txt  CMakeLists.txt  OpenGL1.vcxproj  OpenGL1.vcxproj.filters  cmake_install.cmake  imgui.ini
OpenGL1/Res/BlockData/: blockData.json  material_shader.txt
OpenGL1/Res/shader/: fragment.glsl  traingle.shader  vertex.glsl
OpenGL1/Res/shader/lightcube/: light_fragment.glsl  light_vertex.glsl
OpenGL1/src/: AmbientFactors.h  App.cpp  ErrorChecker.cpp  ErrorChecker.h  IndexBuffer.cpp  IndexBuffer.h  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  VertexData.h  blockMaterials.cpp  blockMaterials.h  camera.cpp  camera.h  initBlockData.cpp  initBlockData.h  light_Type.h
OpenGL1/src/git/: Header.h
OpenGL1/src/git/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp
OpenGL1/src/git/stbimage/: stb_image.h
